# etrobo_techno

./: README.md
src/: Makefile.inc  app.cfg  app.cpp  app.h  compileSW.h  compileSwitch.h  main.cpp  main.h
src/common/: README.md  common.h  paramStorage.cpp  paramStorage.h
src/common/app/: avr.cpp  avr.h  lineMonitor.cpp  lineMonitor.h  pidCtrl.cpp  pidCtrl.h
src/common/mid/: colorSense.cpp  colorSense.h  forceSense.cpp  forceSense.h  starter.cpp  starter.h  timer.cpp  timer.h  walker.cpp  walker.h
src/left/: leftMain.cpp  leftMain.h
src/right/: rightMain.cpp  rightMain.h
src/right/app/: lineTrace.cpp  lineTrace.h  scenarioTrace.cpp  scenarioTrace.h
test/: CMakeLists.txt
tool/: delete_file.sh
